--- a/webapp/src/translations/languages/zht.json
+++ b/webapp/src/translations/languages/zht.json
@@ -683,7 +683,13 @@
         "loading": "加載中…",
         "category": "類別",
         "blockHeight": "區塊高度",
-        "amount": "數目"
+        "amount": "數目",
+        "csvExport": "CSV Export",
+        "downloadTransaction": "Download Transaction",
+        "download": "Download",
+        "maxBlock": "Max Block Height",
+        "limit": "Limit",
+        "noReward": "No Rewards"
       },
       "walletWalletsPage": {
         "walletWallets": "錢包",
