feat: encrypt wallet  (#506)
* feat: initial encrypt wallet changes

* chore: new labels

* chore: added german translations

* chore: bump packages

* chore: bump packages

* chore: bump packages

* feat: initial work on locking of wallet

* feat: lock and unlock wallet

* build: test dev build

* chore: fixed typo

* chore: test style

* chore: revert styling

* chore: updated snapshots

* chore: removed branch build

* chore: bump packages

* feat: moved unlock state to wallet

* feat: styling changes

* feat: updates on flows

* chore: updated labels

* chore: backup on post encrypt

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -106,7 +106,7 @@
     "helpPage": {
       "title": "Hilfe",
       "help": "Hilfe",
-      "helpPageHeader": "Verbinde Dich mit der Community über diese Optionen:",
+      "helpPageHeader": "Verbinde dich mit der Community über diese Optionen:",
       "telegramEn": "Telegram Community (EN)",
       "telegramDe": "Telegram Community (DE)",
       "github": "Ein Problem melden",
@@ -560,6 +560,7 @@
       "createOrRestoreWalletPage": {
         "title": "Wallet - Wallet erstellen oder wiederherstellen",
         "loading": "Laden...",
+        "restoreFromBackup": "Wallet mit Backup wiederherstellen",
         "createOrRestoreWallet": "Wallet erstellen oder wiederherstellen",
         "createANewWallet": "Neue Wallet erstellen",
         "restoreWalletFromMnemonicSeed": "Wallet aus Seed wiederherstellen",
@@ -752,6 +753,15 @@
         "sent": "Gesendet",
         "removePoolLiquidity": "Liquidität entfernen",
         "accountToUtxos": "Konto zu UTXOs"
+      },
+      "encryptWalletPage": {
+        "title": "Wallet verschlüsseln",
+        "encryptingWallet": "Verschlüssele Wallet",
+        "unableToUnlockYourWallet": "Wallet kann nicht entsperrt werden? Setze die DeFi App auf Werkseinstellungen zurück und stelle die Wallet mit deinem Seed oder einem Backup (wallet.dat) wieder her.",
+        "walletIsLocked": "Wallet gesperrt. Um mit der Transaktion fortzufahren, entsperre die Wallet mit dem Passwort."
+      },
+      "unlockWalletPage": {
+        "title": "Entsperre Wallet"
       }
     },
     "console": {
@@ -824,6 +834,7 @@
     "okIHaveDoneIt": "Ok, ich habe es getan.",
     "encryptWalletNoticeTitle": "Wallet sperren",
     "encryptWalletNotice": "Aus Sicherheitsgründen wird empfohlen, die Sperrung der Wallet mit einem Passwort zu aktivieren. Gebe das Passwort ein, mit dem Du Deine Wallet entsperren willst.",
+    "encryptWalletWarning": "Bewahre dein Passwort sicher auf. Wenn du es verlierst gibt es keine Möglichkeit für eine Wiederherstellung. Du wirst keine Transaktion mehr ausführen können, wenn deine Wallet gesperrt ist.",
     "enableLocking": "Sperren aktivieren",
     "later": "SPÄTER",
     "passphraseLabel": "Passwort eingeben",
@@ -858,7 +869,16 @@
     "exitBackupWarning": "Das jetzige Beenden deiner Wallet führt zum entfernen deiner Wallet aus der App. Wenn du dein Wallet später wieder hinzufügen möchtest, brauchst du deinen Mnemonic Seed. Möchtest du ein Backup deiner Wallet machen bevor du die Wallet beendest.",
     "backupAndExit": "Backup und Beenden",
     "exit": "Beenden",
-    "deletePeersAndBlocks": "Peers und Blöcke löschen"
+    "deletePeersAndBlocks": "Peers und Blöcke löschen",
+    "security": "Sicherheit",
+    "passphraseLock": "Passphrase lock",
+    "changePassphrase": "Passwort ändern",
+    "autoLock": "Automatisch sperren",
+    "changeLockPassphrase": "Change lock passphrase",
+    "currentPassphrase": "Aktuelles Passwort",
+    "newPassphrase": "Neues Passwort",
+    "confirmNewPassphrase": "Neues Passwort bestätigen",
+    "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?"
   },
   "general": {
     "defiApp": "DeFi app",
