feat: create wallet new flow (#514)
* feat: initial encrypt wallet changes

* chore: new labels

* chore: added german translations

* chore: bump packages

* chore: bump packages

* chore: bump packages

* feat: initial work on locking of wallet

* feat: lock and unlock wallet

* build: test dev build

* chore: fixed typo

* chore: test style

* chore: revert styling

* chore: updated snapshots

* chore: removed branch build

* chore: bump packages

* feat: moved unlock state to wallet

* feat: styling changes

* feat: updates on flows

* chore: updated labels

* chore: backup on post encrypt

* feat: initial commit for create wallet

* feat: create wallet flow

* feat: remap err and create on default wallet location

* feat: remove default wallet

* chore: updated err

* feat: added check on warnings

* fix: remap message

* fix: remove unused methods

* feat: add passphrase err display

* fix: err for sending and restore change state

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -95,7 +95,8 @@
       "title": "DFI Block Processing Center",
       "header": "DFI Block Processing Center",
       "detail": "It seems you have stumbled here by accident. This is where our workers make sure every DFI block is properly fastened to the chain. As this is a restricted area, we kindly ask that you turn around.",
-      "goBack": "Go back"
+      "goBack": "Go back",
+      "insufficientFunds": "Insufficient UTXO DFI for transaction fees. Please send some DFI from an exchange or another wallet and try again."
     },
     "exchangePage": {
       "title": "Exchange",
