feat: passphrase strength meter (#522)
* chore: bump app 2.3.0 and node to 1.5.0

* chore: npm 7 and electron 11.3.0

* test: prettier

* sample commit

* test

* chore: bump packages

* sample

* sample

* fix: changes

* chore: bump packages

* chore: revert changes

* feat: added branch

* chore: remove branch

* chore: add packages

* chore: revert node ver

* chore: remove branch

* chore: bump packages

* feat: passphrase strength

* style: codacy err

Co-authored-by: Fuxing Loh <4266087+fuxingloh@users.noreply.github.com>
Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -584,7 +584,10 @@
         "mnemonicSeed": "Mnemonic seed",
         "walletDat": "wallet.dat",
         "chooseRecentBackup": "Or choose a recent backup",
-        "comingSoon": "Coming soon"
+        "comingSoon": "Coming soon",
+        "enterPassphrase": "Enter the passphrase which you will use to unlock your wallet.",
+        "create": "Create",
+        "walletName": "Wallet name"
       },
       "createNewWalletPage": {
         "back": "Back",
@@ -777,7 +780,11 @@
         "title": "Encrypt wallet",
         "encryptingWallet": "Encrypting wallet",
         "unableToUnlockYourWallet": "Unable to unlock your wallet? Reset DeFi app to default data and settings, then restore your wallet from your wallet recovery seed or backup (wallet.dat).",
-        "walletIsLocked": "Wallet locked. To proceed with your transaction, please unlock with passphrase."
+        "walletIsLocked": "Wallet locked. To proceed with your transaction, please unlock with passphrase.",
+        "passphraseStrength": "Passphrase strength: %{strength}",
+        "strong": "Strong",
+        "weak": "Weak",
+        "none": "None"
       },
       "unlockWalletPage": {
         "title": "Unlock wallet"
