feature: force reindex on node update (#531)
* feat: force reindex on node update

* chore: german translations

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -95,7 +95,8 @@
       "title": "DFI Block Processing Center",
       "header": "DFI Block Processing Center",
       "detail": "Es scheint, als wärst Du zufällig hierher gestolpert. Hier stellen unsere Arbeiter sicher, dass jeder DFI-Block richtig an der Chain befestigt ist. Da dies ein Sperrgebiet ist, bitten wir Dich, wieder umzudrehen.",
-      "goBack": "Gehe zurück"
+      "goBack": "Gehe zurück",
+      "insufficientFunds": "Nicht genügend UTXO DFI für die Transaktionsgebühren vorhanden. Bitte schicke ein paar DFI von einer Exchange oder einem anderen Wallet zu dieser Adresse und versuche es erneut."
     },
     "exchangePage": {
       "title": "Exchange",
@@ -554,7 +555,20 @@
       "mainnet": "Mainnet",
       "testnet": "Testnet",
       "regnet": "Regnet",
-      "deletePeersAndBlocks": "Delete peers and blocks"
+      "deletePeersAndBlocks": "Delete peers and blocks",
+      "security": "Sicherheit",
+      "passphraseLock": "Passphrase lock",
+      "changePassphrase": "Passwort ändern",
+      "autoLock": "Automatisch sperren",
+      "changeLockPassphrase": "Change lock passphrase",
+      "currentPassphrase": "Aktuelles Passwort",
+      "newPassphrase": "Neues Passwort",
+      "confirmNewPassphrase": "Neues Passwort bestätigen",
+      "save": "Speichern",
+      "updatingPassphrase": "Aktualisiere Passwort",
+      "incorrectPassphrase": "Das eingegebene Passwort ist nicht korrekt.",
+      "minute": "%{time} Minute",
+      "minutes": "%{time} Minuten"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -569,7 +583,10 @@
         "hdWallet": "HD Wallet",
         "mnemonicSeed": "Mnemonic Seed",
         "chooseRecentBackup": "oder benutze ein aktuelles Backup",
-        "comingSoon": "Bald verfügbar"
+        "comingSoon": "Bald verfügbar",
+        "enterPassphrase": "Gib ein Passwort ein, welches du zum entsperren deiner Wallet benutzen möchtest.",
+        "create": "Erstellen",
+        "walletName": "Wallet-Name"
       },
       "createNewWalletPage": {
         "back": "ZURÜCK",
@@ -758,7 +775,11 @@
         "title": "Wallet verschlüsseln",
         "encryptingWallet": "Verschlüssele Wallet",
         "unableToUnlockYourWallet": "Wallet kann nicht entsperrt werden? Setze die DeFi App auf Werkseinstellungen zurück und stelle die Wallet mit deinem Seed oder einem Backup (wallet.dat) wieder her.",
-        "walletIsLocked": "Wallet gesperrt. Um mit der Transaktion fortzufahren, entsperre die Wallet mit dem Passwort."
+        "walletIsLocked": "Wallet gesperrt. Um mit der Transaktion fortzufahren, entsperre die Wallet mit dem Passwort.",
+        "passphraseStrength": "Passwortstärke: %{strength}",
+        "strong": "Stark",
+        "weak": "Schwach",
+        "none": "Keine"
       },
       "unlockWalletPage": {
         "title": "Entsperre Wallet"
@@ -870,15 +891,9 @@
     "backupAndExit": "Backup und Beenden",
     "exit": "Beenden",
     "deletePeersAndBlocks": "Peers und Blöcke löschen",
-    "security": "Sicherheit",
-    "passphraseLock": "Passphrase lock",
-    "changePassphrase": "Passwort ändern",
-    "autoLock": "Automatisch sperren",
-    "changeLockPassphrase": "Change lock passphrase",
-    "currentPassphrase": "Aktuelles Passwort",
-    "newPassphrase": "Neues Passwort",
-    "confirmNewPassphrase": "Neues Passwort bestätigen",
-    "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?"
+    "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?",
+    "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten?",
+    "nodeVersionHeader": "Node update"
   },
   "general": {
     "defiApp": "DeFi app",
