fix: german translation for block transaction failed (#537)

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -346,7 +346,7 @@
         "back": "ZURÜCK",
         "addLiquidity": "Liquidität hinzufügen",
         "txHash": "Transaktionshash",
-        "blockTransactionFailed": "Bitte warte bis deine Transaktion dem nächsten Block hinzugefügt wurde, bevor du mit e."
+        "blockTransactionFailed": "Bitte warte bis deine Transaktion dem nächsten Block hinzugefügt wurde, bevor du mit einer neuen Transaktion fortfährst."
       },
       "liquidityInfo": {
         "title": "Liquidität",
