feature/csv export (#579)
* Design improvements

* Made design changes

* Added language translations

* Made some improvements

* fix: codacy err

* fix: TS err

Co-authored-by: JJ Adonis <josejaimecareers@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -738,12 +738,15 @@
         "walletPaginationRange": "%{from} – %{to} von %{total} Wallets",
         "txPaginationRange": "%{from} - %{to} von %{total} Transaktionen",
         "commission": "Kommission",
-        "csvExport": "CSV Export",
-        "downloadTransaction": "Transaktionen herunterladen",
-        "download": "Download",
-        "maxBlock": "Max Blockhöhe",
-        "limit": "Limit",
-        "noReward": "Keine Rewards"
+        "exportData": "EXPORT DATA",
+        "exportWalletData": "Export wallet data",
+        "export": "EXPORT",
+        "maxBlockHeight": "Up to block height",
+        "limit": "Limit to last",
+        "max": "Max",
+        "transaction": "transaktionen",
+        "format": "Format",
+        "csv": "CSV"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
