--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -730,7 +730,7 @@
         "availableBalance": "Available balance",
         "pending": "Pending",
         "updateAvailableLabel": "Update available",
-        "includeRewards": "Include rewards",
+        "includeRewards": "Include reward transactions",
         "loading": "Loading...",
         "category": "Category",
         "amount": "Amount",
@@ -738,17 +738,20 @@
         "walletPaginationRange": "%{from} – %{to} of %{total} wallets",
         "txPaginationRange": "%{from} - %{to} of %{total} transactions",
         "commission": "Commission",
-        "csvExport": "CSV export",
-        "downloadTransaction": "Download transaction",
-        "download": "Download",
-        "maxBlock": "Max block height",
+        "exportData": "EXPORT DATA",
+        "exportWalletData": "Export wallet data",
+        "export": "EXPORT",
+        "maxBlockHeight": "Up to block height",
         "blockHeight": "Block height",
         "blockHash": "Block hash",
         "type": "Type",
         "poolID": "Pool ID",
         "amounts": "Amounts",
-        "limit": "Limit",
-        "noReward": "No rewards"
+        "limit": "Limit to last",
+        "max": "Max",
+        "transaction": "transactions",
+        "format": "Format",
+        "csv": "CSV"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
