--- a/webapp/src/translations/languages/nl.json
+++ b/webapp/src/translations/languages/nl.json
@@ -457,17 +457,21 @@
         "availableBalance": "Beschikbaar saldo",
         "pending": "In afwachting",
         "updateAvailableLabel": "Update aanwezig",
-        "csvExport": "CSV Export",
-        "downloadTransaction": "Download Transaction",
-        "download": "Download",
-        "maxBlock": "Max Block Height",
+        "exportData": "EXPORT DATA",
+        "exportWalletData": "Export wallet data",
+        "export": "EXPORT",
+        "maxBlockHeight": "Up to block height",
         "blockHeight": "Block height",
         "blockHash": "Block hash",
         "type": "Type",
         "poolID": "Pool ID",
         "amounts": "Amounts",
-        "limit": "Limit",
-        "noReward": "No Rewards"
+        "limit": "Limit to last",
+        "max": "Max",
+        "includeRewards": "Include reward transactions",
+        "transaction": "transactions",
+        "format": "Format",
+        "csv": "CSV"
       },
       "walletTokensPage": {
         "walletTokens": "Wallet – Tokens",
