--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -464,17 +464,21 @@
         "availableBalance": "Доступные средства",
         "pending": "В ожидании",
         "updateAvailableLabel": "Обновления доступны",
-        "csvExport": "CSV Export",
-        "downloadTransaction": "Download Transaction",
-        "download": "Download",
-        "maxBlock": "Max Block Height",
+        "exportData": "EXPORT DATA",
+        "exportWalletData": "Export wallet data",
+        "export": "EXPORT",
+        "maxBlockHeight": "Up to block height",
         "blockHeight": "Block height",
         "blockHash": "Block hash",
         "type": "Type",
         "poolID": "Pool ID",
         "amounts": "Amounts",
-        "limit": "Limit",
-        "noReward": "No Rewards"
+        "limit": "Limit to last",
+        "max": "Max",
+        "transaction": "transactions",
+        "format": "Format",
+        "csv": "CSV",
+        "includeRewards": "Include reward transactions"
       },
       "walletWalletsPage": {
         "walletWallets": "Кошельки",
