--- a/webapp/src/translations/languages/zhs.json
+++ b/webapp/src/translations/languages/zhs.json
@@ -684,17 +684,19 @@
         "category": "类别",
         "blockHeight": "区块高度",
         "amount": "数目",
-        "csvExport": "CSV Export",
-        "downloadTransaction": "Download Transaction",
-        "download": "Download",
-        "maxBlock": "Max Block Height",
-        "blockHeight": "Block height",
+        "exportData": "EXPORT DATA",
+        "exportWalletData": "Export wallet data",
+        "export": " EXPORT",
+        "maxBlockHeight": "Up to block height",
         "blockHash": "Block hash",
         "type": "Type",
         "poolID": "Pool ID",
         "amounts": "Amounts",
-        "limit": "Limit",
-        "noReward": "No Rewards"
+        "limit": "Limit to last",
+        "max": "Max",
+        "transaction": "transactions",
+        "format": "Format",
+        "csv": "CSV"
       },
       "walletWalletsPage": {
         "walletWallets": "钱包",
